# cam-counter

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml
.claude/: README.md
.github/workflows/: ci.yml  contracts.yml  edge-ci.yml  promote.yml  release.yml
contracts/: README.md  bundle_manifest.schema.json  channel_manifest.schema.json  crossing_event.schema.json  device_registry_item.schema.json  line_config.schema.json
detection/: test_hailo_person.py  yolo_personas.py
docker/: .dockerignore  .gitignore  README.md  api.Dockerfile  docker-compose.poc.yml  edge-entrypoint.sh  edge.Dockerfile  hailo_probe.py  probe_hailo.py  run-poc.sh  run-probe.sh  stage-debs.sh
docs/: ARCHITECTURE.md  CONTRIBUTING.md  HALLAZGOS.md  contracts-reconciliation.md  naming-standard.md  poc-hailo-docker.md  provisioning.md
docs/iot/: 00-naming-standard.md  01-iot-topology.md  02-provisioning-certs.md  03-security-model.md  04-device-docker-mqtt.md  05-lambda-ingest.md  06-nextjs-amplify.md  07-iac-terraform.md  RISKS.md  ROADMAP.md  roadmap.json
lambdas/: requirements-dev.txt
lambdas/clip_presign/: handler.py  requirements.txt  test_handler.py
lambdas/clip_presign/tests/: conftest.py  test_handler.py
lambdas/device_status/: handler.py
lambdas/device_status/tests/: conftest.py  test_handler.py
lambdas/events_ingest/: contract.py  ddb.py  handler.py  keys.py  requirements.txt  validation.py
lambdas/events_ingest/tests/: conftest.py  fakeddb.py  test_contract.py  test_handler.py  test_keys.py
lambdas/fleet_api/: ddb.py  handler.py  keys.py  requirements.txt  test_handler.py
lambdas/fleet_api/tests/: conftest.py  fakeddb.py  test_handler.py
ota/: README.md  conftest.py
ota/agent/: __init__.py  __main__.py  agent.py  clients.py  config.py  ed25519.py  health.py  installer.py  interfaces.py  minisign.py
ota/agent/keys/: cam-counter-release.pub
ota/packaging/: make-release.sh
ota/systemd/: cam-counter-update.service  cam-counter-update.timer
ota/tests/: conftest.py  test_agent_flow.py  test_full_cycle.py  test_health_soak.py  test_installer.py  test_manifest_schema.py  test_minisign.py  test_no_secret_in_artifact.py  test_publish_manifest.py  test_selftest_integration.py  test_version_equality.py
ota/tools/: __init__.py  fleet_status.py  selftest_release_bucket.py  validate_manifest.py
plan/: 00-OVERVIEW.md
plan/prompts/: PR00.md  PR00b.md  PR01.md  PR02.md  PR03.md  PR04.md  PR05.md  PR06.md  PR07.md  PR08.md  PR09.md  PR10.md  PR11.md
rtsp-enable/: _lib_credentials.sh  build.gradle.kts  enable_rtsp_now.sh  rtsp_enable_final.sh  start_detection.sh
rtsp-enable/_scripts_exploracion/: oneshot_enable.sh  quiet_then_enable.sh  reboot_watcher.sh  setup_and_enable.sh
scripts/: README.md  build_edge_artifact.sh  cognito-create-admin.sh  install_api_service.sh  install_edge_service.sh  install_hailo_service.sh  provision-device.sh  publish_manifest.py  test_version.py  verify_toolchain.sh  version.py
systemd/: hailo-personas.service
terraform/: .tflint.hcl  Makefile  README.md  bootstrap.sh
terraform/environments/prod/: README.md  backend.tf  backend.tf.example  main.tf  outputs.tf  providers.tf  versions.tf
terraform/modules/: README.md
terraform/modules/amplify-app/: main.tf  outputs.tf  variables.tf  versions.tf
terraform/modules/api-dashboard/: variables.tf
terraform/modules/cognito/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
terraform/modules/device-registry/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
terraform/modules/events-table/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
terraform/modules/fleet-releases/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
terraform/modules/iam-edge/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
terraform/modules/iam-github-oidc/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
terraform/modules/iam-lambda/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
tests/contracts/: README.md  requirements.txt  test_contracts.py
v1/api/: README.md  app.py  conftest.py  engine.py  fakes.py  gen_openapi_snapshot.py  hub.py  mjpeg.py  openapi.snapshot.json  pyproject.toml  requirements-dev.txt  requirements.txt  routes.py  rtsp_source.py  run_api.sh  schemas.py  settings.py
v1/api/tests/: test_api.py  test_api_harness.py  test_openapi_snapshot.py  test_schemas_contracts.py  test_stream_ws.py
v1/detection/: profile_pipeline.py  yolo_personas_mt.py
v1/docs/: HALLAZGOS.md  INTEGRACION_AWS.md  PR10-supervisor-sync.md  SMOKE_EN_PI.md
v1/edge/: README.md  pyproject.toml  requirements.txt  run_edge.sh
v1/edge/cam_counter_edge/: __init__.py  app.py  clip.py  command_handler.py  config.py  crossing_payload.py  detector.py  dummy.py  healthcheck.py  identifiers.py  iot_credentials.py  line_config_contract.py  line_counter.py  mqtt_publisher.py  shadow_reconciler.py  store.py  sync.py  sync_dispatch.py  sync_runner.py  tracker.py  transport.py  types.py
v1/edge/tests/: aws_integration.py  conftest.py  test_clip.py  test_command_handler.py  test_config.py  test_contracts_alignment.py  test_crossing_payload.py  test_detector_parse.py  test_dummy.py  test_identifiers.py  test_iot_credentials.py  test_lazy_import.py  test_line_config_contract.py  test_line_counter.py  test_mqtt_publisher.py  test_shadow_reconciler.py  test_store.py  test_supervisor.py  test_sync.py  test_sync_dispatch.py  test_sync_integration_aws.py  test_tracker.py  test_transport.py  test_transport_cutover.py
v1/rtsp-enable/: _lib_credentials.sh  enable_rtsp_now.sh  start_detection.sh
v1/systemd/: cam-counter-api.service  cam-counter-edge.service  hailo-personas.service
v1/ui/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
v1/ui/e2e/: README.md  (+7 more)
web/dashboard/: .env.example  .gitignore  README.md  amplify.yml  next.config.js  package-lock.json  package.json  tsconfig.json
(+78 files in other folders)
