[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cam-counter-api"
version = "0.0.0"
description = "API local FastAPI + SPA same-origin del producto cam-counter (corre en el Pi)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "jlsaco" }]
# Versiones FIJADAS (==) para que el snapshot de /api/openapi.json sea
# REPRODUCIBLE entre el dev (ARM64) y el CI (x86): un bump de FastAPI/Pydantic
# puede cambiar la forma del OpenAPI. El paquete de borde se instala aparte
# (`pip install -e v1/edge`); aquí se consume como dependencia ya instalada.
dependencies = [
  "fastapi==0.138.0",
  "uvicorn[standard]==0.49.0",
  "pydantic==2.13.4",
  "pillow>=10",
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "pytest>=7",
  "ruff>=0.4",
  "mypy>=1.8",
  "jsonschema>=4",
]

[tool.ruff]
line-length = 100
target-version = "py311"
# Layout PLANO: los módulos (app, engine, ...) se importan top-level (la
# verificación hace `cd v1/api && python -c 'from app import app'`).
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "PLC0415"]

[tool.ruff.lint.isort]
known-first-party = [
  "app",
  "engine",
  "fakes",
  "hub",
  "mjpeg",
  "routes",
  "schemas",
  "settings",
]
known-third-party = ["cam_counter_edge"]

[tool.mypy]
python_version = "3.11"
files = ["."]
# Layout plano sin paquete: trata cada .py como módulo top-level.
explicit_package_bases = true
mypy_path = "."
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = false
no_implicit_optional = true
disallow_untyped_defs = true
exclude = '(^|/)(build|dist)/'

[[tool.mypy.overrides]]
# El paquete de borde no publica marcador py.typed; se consume como API.
module = "cam_counter_edge.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Los tests no exigen anotaciones completas.
module = "tests.*"
disallow_untyped_defs = false
