[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cam-counter-edge"
version = "0.0.0"
description = "Subsistema de conteo de personas en el borde (Raspberry Pi 5 + Hailo-8) del monorepo cam-counter."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "jlsaco" }]
# Dependencias mínimas para x86 SIN Hailo. NO se declara `hailo_platform`:
# no existe en PyPI (es un binario del Pi) y se importa de forma perezosa.
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
# `boto3` es OPCIONAL: el conteo/persistencia local NO lo necesita (edge-first).
# Sólo el worker cloud-sync (sync.py) lo usa, y lo importa de forma PEREZOSA, así
# que el paquete importa y CI corre las pruebas con fakes SIN boto3 instalado.
cloud = [
  "boto3>=1.34",
]
dev = [
  "pytest>=7",
  "ruff>=0.4",
  "mypy>=1.8",
  "boto3>=1.34",
]

[project.scripts]
# Entrypoint del supervisor multi-cámara (un VDevice Hailo compartido + /healthz).
cam-counter-edge = "cam_counter_edge.app:main"

[tool.setuptools]
# Layout plano: el paquete importable es `cam_counter_edge`. `tests/` queda fuera.
packages = ["cam_counter_edge"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["cam_counter_edge", "tests"]

[tool.ruff.lint]
# Reglas razonables: errores pyflakes/pycodestyle, imports ordenados (I),
# upgrades de sintaxis (UP), bugbear (B) y un subconjunto de pylint (PL*).
select = ["E", "F", "I", "W", "UP", "B", "PLC0415"]

[tool.ruff.lint.isort]
# El paquete es first-party aunque esté instalado en modo editable en CI.
known-first-party = ["cam_counter_edge"]

[tool.pytest.ini_options]
# Markers registrados para evitar warnings de "unknown marker".
# `integration_aws`: prueba de integración REAL contra AWS (gated por credenciales;
# skip sin ellas, PASS exigido en el runner — ver tests/conftest.py).
markers = [
  "integration_aws: prueba de integración end-to-end contra AWS REAL (recursos de PR04)",
]

[tool.mypy]
python_version = "3.11"
# boto3 y cv2/hailo_platform no están tipados/instalados en CI: ignorar sus stubs.
ignore_missing_imports = true
# Pragmático para este paquete mixto (numpy/Any en límites de hardware).
check_untyped_defs = true
warn_unused_ignores = false
