[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cam-counter-edge"
version = "0.0.0"
description = "Subsistema de conteo de personas en el borde (Raspberry Pi 5 + Hailo-8) del monorepo cam-counter."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "jlsaco" }]
# Dependencias mínimas para x86 SIN Hailo. NO se declara `hailo_platform`:
# no existe en PyPI (es un binario del Pi) y se importa de forma perezosa.
# `pillow` provee el encoder JPEG del buffer de clips y el fallback GIF del
# grabador (encoder PORTÁTIL garantizado en CI x86 y en el Pi); el MP4 preferido
# usa cv2 (en el Pi) o el extra opcional `mp4` (imageio-ffmpeg) y, si falta,
# degrada limpio a GIF. Ver `cam_counter_edge/clip.py`.
dependencies = [
  "numpy>=1.24",
  "pillow>=9",
]

# Entrypoint del supervisor multi-cámara (PR10). `cam-counter-edge` arranca el
# proceso de conteo (N pipelines sobre un VDevice Hailo compartido) + /healthz.
[project.scripts]
cam-counter-edge = "cam_counter_edge.app:main"

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "ruff>=0.4",
  "mypy>=1.8",
]
# Encoder MP4 opcional (preferido sobre el fallback GIF) para plataformas sin un
# cv2 utilizable. `imageio-ffmpeg` trae un ffmpeg embebido. Si no está instalado,
# el grabador cae limpio a GIF (pillow).
mp4 = [
  "imageio>=2.28",
  "imageio-ffmpeg>=0.4",
]
# SDK AWS para el worker de cloud-sync (sync.py) y la prueba de integración real
# contra AWS. NO es dependencia base: el módulo importa boto3 de forma PEREZOSA
# (igual que el Detector con Hailo), así que la lógica se testea en CI con fakes
# sin boto3. El runner que ejecuta la integración real instala este extra.
sync = [
  "boto3>=1.26",
]
# Cliente MQTT para el modo `iot` (publicador WP14 + reconciliador de shadows WP15).
# NO es dependencia base: `paho.mqtt.client` se importa de forma PEREZOSA, así que la
# lógica (drenado/ack/reconciliación/idempotencia) se testea en CI x86 con fakes sin
# broker ni red. El device en el Pi (y la integración real) instala este extra.
iot = [
  "paho-mqtt>=1.6",
]

[tool.setuptools]
# Layout plano: el paquete importable es `cam_counter_edge`. `tests/` queda fuera.
packages = ["cam_counter_edge"]

[tool.pytest.ini_options]
# Marker de la suite de integración REAL contra AWS (gated por credenciales). Se
# registra para evitar warnings de "marker desconocido" y para poder seleccionarla
# con `-m integration_aws`. Por defecto NO se ejecuta (degrada a SKIP sin
# credenciales; ver tests/conftest.py para el gating estricto del runner).
markers = [
  "integration_aws: prueba de integración end-to-end contra AWS REAL (recursos de PR04); skip sin credenciales",
]

[tool.mypy]
# Tipado del paquete de borde. Las dependencias de HARDWARE/opcionales se importan
# de forma PEREZOSA (Hailo `hailo_platform`, OpenCV `cv2`, `imageio`, `boto3`) y NO
# traen stubs en el entorno x86/CI: se ignoran sus imports (no son parte de la
# superficie tipada del paquete). El resto SÍ se chequea.
python_version = "3.11"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["cam_counter_edge", "tests"]

[tool.ruff.lint]
# Reglas razonables: errores pyflakes/pycodestyle, imports ordenados (I),
# upgrades de sintaxis (UP), bugbear (B) y un subconjunto de pylint (PL*).
select = ["E", "F", "I", "W", "UP", "B", "PLC0415"]

[tool.ruff.lint.isort]
# El paquete es first-party aunque esté instalado en modo editable en CI.
known-first-party = ["cam_counter_edge"]
